assets/css/index.css
body {
  padding-top: 200px;
  background-color: #eee; }

table img {
  width: 100%; }

.panel {
  text-align: center;
  box-shadow: 0px 1px 20px #aaa; }

.center {
  margin: auto;
  width: 48%; }

#navBar, #footer {
  background-color: #ddf;
  box-shadow: 0px 1px 10px black; }
  #navBar li, #footer li {
    font-size: 20px; }

#logo {
  height: 100%; }

#profileImg {
  border-radius: 50%; }

#home, #about, #project, #contact {
  height: 800px; }

